[tool.poetry]
name = "lru_cash_redis"
version = "0.1.0"
description = ""
authors = ["Vitaliy Lobko <vitaliy.lobko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"
redis-lru = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
